[project]
name = "pyrdk"
version = "v1.8+2"
description = "pyRDK is a Python-based secondary development framework built on top of Flexiv RDK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flexivrdk==1.8",
    "grpcio>=1.78.0",
    "grpcio-tools==1.44.0",
    "numpy>=2.2.6",
    "protobuf==3.19.6",
    "pynng>=0.9.0",
    "pytz>=2025.2",
    "scipy>=1.15.3",
    "setuptools==44.1.1",
    "spdlog>=2.0.6",
]
